# container_image_dist_ref

./: .clippy.toml  .editorconfig  .envrc  .gitignore  .rustfmt.toml  ARCHITECTURE.md  Cargo.toml  Makefile  README.md  flake.nix  go.mod  go.sum  rust-toolchain.toml
.github/: FUNDING.yaml
.github/workflows/: rust.yml
benches/: basic_benchmark.rs
examples/: parse_canonical.rs  parse_stdin.rs
grammars/: digest.diff  digest_algorithm.diff  digest_encoded.diff  host_or_path.ebnf  host_subset.ebnf  oci_digest.ebnf  oci_name.ebnf  reference.ebnf
internal/fuzz_canonical/: fuzz_test.go  inputs.txt
internal/reference_oracle/: bench_test.go  fuzz_test.go  main.go
nix/: filter_filesets.nix
scripts/: diff_digest.sh  diff_digest_algorithm.sh  diff_digest_encoded.sh  fetch_dist_ref_grammar.sh  fetch_oci_digest_grammar.sh  fetch_oci_name_grammar.sh  host_subset.sh  lines.sh  prepare_release.sh  shout.sh  subset_host_or_path.sh  trim_wasm.sh
scripts/bench_oracle/: oracle_test.go
scripts/reference_oracle/: bench_test.go  fuzz_test.go  inputs.txt  main.go
src/: err.rs  lib.rs  parse.rs  path.rs  span.rs  tag.rs
src/ambiguous/: domain_or_tagged_ref.rs  host_or_path.rs  mod.rs  port_or_tag.rs
src/ambiguous/domain_or_tagged_ref/: mod.rs
src/ambiguous/host_or_path/: mod.rs
src/ambiguous/port_or_tag/: mod.rs
src/digest/: algorithm.rs  encoded.rs  mod.rs
src/domain/: host.rs  ipv6.rs  mod.rs  port.rs
src/name/: mod.rs  path.rs
src/name/domain/: host.rs  ipv6.rs  mod.rs  port.rs  valid_ipv6.tsv
src/path/: mod.rs
src/tag/: mod.rs
tests/fixtures/: README.md
tests/fixtures/references/: outputs.tsv  xfail.txt
tests/fixtures/references/invalid/: inputs.txt  outputs.yaml
tests/fixtures/references/valid/: inputs.txt  outputs.yaml
