[package]
name = "container_image_dist_ref"
description = "A library for parsing and validating container image references."
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html


[dev-dependencies]
criterion = "0.4"

[[bench]]
name = "basic_benchmark"
harness = false

[[example]]
name = "parse_stdin"
crate-type = ["bin"]
