# See https://doc.rust-lang.org/cargo/reference/manifest.html
[package]
name = "container_image_dist_ref"
description = "A library for parsing and validating container image references."
version = "0.3.0"
edition = "2021"
license = "Apache-2.0"
repository = "https://github.com/skalt/container_image_dist_ref.git"
readme = "README.md"

exclude = [
  "go.*",
  "internal/*",
  "flake.*",
  "nix",
  ".shellcheckrc",
  ".envrc",
  ".vscode",
]


[dev-dependencies]
criterion = "0.4"

[[bench]]
name = "basic_benchmark"
harness = false

[[example]]
name = "parse_stdin"
crate-type = ["bin"]

[workspace]
members = [".", "build/package/wasm_lib"]
[workspace.dependencies]
container_image_dist_ref = { path = "." }
